[package]
name = "permfixer"
version = "0.2.1"
edition = "2021"

[dependencies]
nix = { version = "0.28", features = ["user"] }
sequential-test = "0.2"

[dependencies.inotify]
version = "0.10"
default-features = false
features = []

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.toml]
version = "0.8"
default-features = false
features = ["parse"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
