[package]
name = "permfixer"
version = "0.2.1"
edition = "2021"

[dependencies]
nix = { version = "0.30", features = ["user"] }
sequential-test = "0.2"

[dependencies.inotify]
version = "0.11"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
