[package]
name = "permfixer"
version = "0.2.1"
edition = "2021"

[dependencies]
inotify = "0.11"
nix = { version = "0.30", features = ["user"] }
sequential-test = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
